--- a/style.css
+++ b/style.css
@@ -1,3 +1,33 @@
 body{
     font-family: 'Poppins', sans-serif;
 }
+h1{
+    font-size: 50px;
+}
+.colour-code {
+    color: orange;
+
+}
+#div {
+    text-align: justify;
+    margin-left: 150px;
+    margin-right: 1000px;
+}
+section {
+    display: flex;
+    
+    width: 150%;
+    margin-left: 100px;
+}
+h1{
+    font-size:50px;
+}
+.half-width {
+width:1000px;
+}
+.half-width image {
+    margin-left: 100px;
+}
+p {
+    text-align: justify;
+}  
