--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body{
     font-family: 'Poppins', sans-serif;
+    margin: 0%;
 }
 h1{
     font-size: 50px;
@@ -15,9 +16,9 @@ h1{
 }
 section {
     display: flex;
-    
-    width: 150%;
-    margin-left: 100px;
+    padding: 5%;
+    width: 90%;
+  
 }
 h1{
     font-size:50px;
@@ -25,9 +26,9 @@ h1{
 .half-width {
 width:1000px;
 }
-.half-width image {
-    margin-left: 100px;
-}
+.half-width img {
+    width: 70%;
+} 
 p {
     text-align: justify;
 }  
@@ -38,4 +39,22 @@ p {
    border-radius: 5px;
    color: white;
    font-weight: 700;
+}
+.bg-image{
+    background-image: url(top-banner.png);
+    background-repeat: no-repeat;
+}
+
+.fa {
+  font-size: 50px;
+  cursor: pointer;
+  user-select: none;
+}
+
+.fa:hover {
+  color: darkblue;
+}
+.second-para {
+    background-image: url(dream-bg.png);
+    background-repeat: no-repeat;background-position: right;
 }
