--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ h1{
     margin-left: 150px;
     margin-right: 1000px;
 }
-section {
+.kahini {
     display: flex;
     padding: 5%;
     width: 90%;
@@ -24,7 +24,8 @@ h1{
     font-size:50px;
 }
 .half-width {
-width:1000px;
+width:50%;
+padding: 2%;
 }
 .half-width img {
     width: 70%;
@@ -57,4 +58,37 @@ p {
 .second-para {
     background-image: url(dream-bg.png);
     background-repeat: no-repeat;background-position: right;
+}
+.halka-dan{padding: 3%;
+    font-size: 400%;
+    
+}
+.box{
+    width: 30%;
+    margin-left: 5%;
+   margin-right:5% ;
+    box-shadow: 10px 10px 70px gray;
+    padding: 5%;
+    border-radius: 10px;
+
+}
+.fokira {
+    background-image: url(exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+}
+#border-color {
+    border-left: 7px solid;
+    border-image: linear-gradient(blue,violet) ;
+    border-image-slice: 1;
+} 
+#border-color2 {border-left: 7px solid;
+    border-image: linear-gradient(orange,tomato) ;
+    border-image-slice: 1;
+} 
+#small{
+    font-size:40px;
+}
+footer p {
+    text-align: center;
 }
