--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ p {
    border-radius: 5px;
    color: white;
    font-weight: 700;
+   box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
 .bg-image{
     background-image: url(top-banner.png);
